--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">HiWeather</string>
     <string name="string_1">~</string>
 </resources>
